<?xml version="1.0" encoding="utf-8" ?>

<ViewFlipper
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewFlipper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/ivDefaultView"
            android:contentDescription="@string/iv_desc"/>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etInetAddress"
            android:layout_marginTop="15dp"
            android:hint="@string/ip_intro"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_rosie"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="onButtonRosieClick"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgView"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_default"
                android:id="@+id/rbView1"
                android:checked="true"
                android:onClick="onRadioViewClick"
                android:enabled="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_cardboard"
                android:id="@+id/rbView2"
                android:checked="false"
                android:onClick="onRadioViewClick"
                android:enabled="false"/>
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgConn"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conn_wifi"
                android:id="@+id/rbConn1"
                android:checked="true"
                android:onClick="onRadioConnClick"
                android:enabled="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conn_bth"
                android:id="@+id/rbConn2"
                android:checked="false"
                android:onClick="onRadioConnClick"
                android:enabled="false" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:layout_marginRight="29dp"
            android:layout_marginEnd="29dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctl_both"
                android:id="@+id/rbCtl3"
                android:checked="true"
                android:onClick="onRadioCtlClick"
                android:enabled="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctl_vid"
                android:id="@+id/rbCtl1"
                android:checked="false"
                android:onClick="onRadioCtlClick"
                android:enabled="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctl_ctl"
                android:id="@+id/rbCtl2"
                android:checked="false"
                android:onClick="onRadioCtlClick"
                android:enabled="false"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStatus"
            android:layout_above="@+id/button"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <com.google.vrtoolkit.cardboard.CardboardView
            android:id="@+id/cardboard_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>


</ViewFlipper>